syntax = "proto3";

service HubService {
    rpc isAllowed (Body) returns (Validation) {}
}

message Body {
    string principalId = 1;
    optional string resourceJson = 2;
    string action = 3;
}

message Validation {
    bool allowed = 1;
}
